[project]
name = "enviparse"
dynamic = ["version"]
description = "enviparse help you manage your application properties using environment variabl"
authors = [{name = "Illuin technology", email = "contact@illuin.tech"}]
maintainers = [{ name = "Illuin Technology", email = "contact@illuin.tech" }]
requires-python = ">=3.9"
readme = "README.md"
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
]
dependencies = []

[project.optional-dependencies]
attr = [
    "attrs>=19.2.0,<25.0.0"
]
opyoid = [
    "opyoid>=1.0.0,<2.1.0"
]
dev = [
    "black==24.8.0",
    "build==1.2.2",
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "pylint==3.2.7",
    "setuptools==75.1.0",
    "twine==5.1.1",
    "wheel==0.44.0",
]

[project.urls]
"Homepage" = "https://github.com/illuin-tech/enviparse"
"Bug Reports" = "https://github.com/illuin-tech/enviparse/issues"
"Source" = "https://github.com/illuin-tech/enviparse/"


[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false
platforms = ["any"]
packages.find.include = ["enviparse", "enviparse.*"]

[tool.coverage]
run.source = ["enviparse"]
run.branch = true
report.exclude_also = [
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.setuptools.dynamic]
version = {file = "VERSION"}