[project]
name = "enviparse"
dynamic = ["version"]
description = "enviparse help you manage your application properties using environment variabl"
authors = [{name = "Illuin technology", email = "contact@illuin.tech"}]
maintainers = [{ name = "Illuin Technology", email = "contact@illuin.tech" }]
requires-python = ">=3.9"
readme = "README.md"
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
]
dependencies = []

[project.optional-dependencies]
attr = [
    "attrs>=19.2.0,<25.0.0"
]
opyoid = [
    "opyoid>=1.0.0,<3.1.0"
]
dev = [
    "black==24.10.0",
    "build==1.2.2.post1",
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "pylint==3.3.2",
    "setuptools==75.6.0",
    "twine==6.0.1",
    "wheel==0.45.1",
]

[project.urls]
"Homepage" = "https://github.com/illuin-tech/enviparse"
"Bug Reports" = "https://github.com/illuin-tech/enviparse/issues"
"Source" = "https://github.com/illuin-tech/enviparse/"


[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false
platforms = ["any"]
packages.find.include = ["enviparse", "enviparse.*"]

[tool.coverage]
run.source = ["enviparse"]
run.branch = true
report.exclude_also = [
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.setuptools.dynamic]
version = {file = "VERSION"}